--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,7 +1,7 @@
-@import "../../utils/variables.css";
+@import '../../utils/variables.css';
 
 .cardCategoryName {
-  font-family: "HelveticaNeueCyr-Medium";
+  font-family: 'HelveticaNeueCyr-Medium';
   font-size: 16px;
 
   color: var(--font-secondary);
@@ -19,7 +19,7 @@
   margin-left: auto;
 }
 .challengeHeader {
-  font-family: "HelveticaNeueCyr-Light";
+  font-family: 'HelveticaNeueCyr-Light';
   font-size: 12px;
   line-height: 12px;
   letter-spacing: 0.02em;
@@ -28,7 +28,7 @@
   margin-bottom: 10px;
 }
 .taskHeader {
-  font-family: "HelveticaNeueCyr-Medium";
+  font-family: 'HelveticaNeueCyr-Medium';
   font-size: 12px;
   line-height: 12px;
   visibility: hidden;
@@ -36,7 +36,7 @@
 }
 
 .cardTitle {
-  font-family: "HelveticaNeueCyr-Bold";
+  font-family: 'HelveticaNeueCyr-Bold';
   font-size: 16px;
   line-height: 1.37;
 
@@ -52,20 +52,15 @@
 }
 
 .cardDate {
-  font-family: "HelveticaNeueCyr-Light";
-  font-size: 14px;
-
-  color: var(--font-secondary);
-
-  margin: 0 auto;
-  margin-bottom: 40px;
-
-  white-space: nowrap;
-  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .cardType {
-  font-family: "HelveticaNeueCyr-Medium";
+  font-family: 'HelveticaNeueCyr-Medium';
   font-size: 11px;
   line-height: 11px;
   letter-spacing: 0.02em;
@@ -87,7 +82,7 @@
 /* new style */
 
 .editTitle {
-  font-family: "HelveticaNeueCyr-Bold";
+  font-family: 'HelveticaNeueCyr-Bold';
 
   font-size: 12px;
   line-height: 12px;
@@ -98,7 +93,6 @@
   text-transform: uppercase;
 
   color: var(--font-secondary);
-
 }
 
 .bottomMenu {
@@ -126,13 +120,22 @@
 }
 
 .saveIcon::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 1px;
   height: 16px;
   background-color: var(--font-secondary);
   top: -40%;
   right: -7px;
+}
+
+.timeText {
+  font-family: 'HelveticaNeueCyr';
+
+  font-size: 14px;
+  line-height: 14px;
+
+  letter-spacing: 0.02em;
 }
 
 .cross {
@@ -144,7 +147,7 @@
 }
 
 .cross::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 1px;
   height: 16px;
@@ -161,7 +164,7 @@
 .start {
   color: var(--font-accent);
 
-  font-family: "HelveticaNeueCyr-Medium";
+  font-family: 'HelveticaNeueCyr-Medium';
   font-size: 14px;
   line-height: 1;
   letter-spacing: 0.02em;
@@ -181,11 +184,10 @@
   border-radius: 10px;
 }
 .task {
-    background: var(--background-card);
+  background: var(--background-card);
 }
 .challenge {
   background: var(--primary);
-
 }
 
 .form {
@@ -199,18 +201,16 @@
   border-bottom: 1px solid var(--font-accent);
   color: var(--font-input);
   margin-top: 4px;
-  caret-color:var(--font-accent);
-
+  caret-color: var(--font-accent);
 
   text-align: center;
-  font-family: "HelveticaNeueCyr-Bold";
+  font-family: 'HelveticaNeueCyr-Bold';
   font-size: 16px;
   line-height: 1.37;
 }
 .inputChallenge {
-  color:#ffffff;
+  color: #ffffff;
 }
-
 
 /* Options */
 
@@ -275,7 +275,7 @@
   }
 
   .cross::after {
-    content: "";
+    content: '';
     position: absolute;
     width: 1px;
     height: 16px;
@@ -296,7 +296,7 @@
   }
   .input:hover,
   .input:focus {
-    outline:none;
+    outline: none;
   }
 }
 
@@ -339,5 +339,3 @@
 .work {
   background-color: var(--bg-card-work);
 }
-
-
