--- a/src/components/TimePickers/TimePickers.module.css
+++ b/src/components/TimePickers/TimePickers.module.css
@@ -1,6 +1,6 @@
 .rooter {
-  width: fit-content;
-  height: fit-content;
+  width: 12px;
+  height: 14px;
 }
 
 .rooter > div {
@@ -17,4 +17,15 @@
 }
 .rooter fieldset {
   display: none !important;
+}
+
+.rooter button {
+  padding: 0;
+  width: 16px;
+  height: 14px;
+}
+
+.rooter div {
+  width: 100%;
+  height: 100%;
 }
