--- a/src/components/TimePickers/TimePickers.module.css
+++ b/src/components/TimePickers/TimePickers.module.css
@@ -1,6 +1,6 @@
 .rooter {
-  width: 12px;
-  height: 14px;
+  width: 14px;
+  height: 16px;
 }
 
 .rooter > div {
@@ -13,19 +13,36 @@
 }
 
 .rooter input {
-  display: none !important;
+  /* display: none !important; */
+  width: 0 !important;
+  padding: 0 !important;
+  height: 0 !important;
+  padding: 0 !important;
 }
 .rooter fieldset {
-  display: none !important;
+  /* display: none !important; */
+  width: 0 !important;
+  padding: 0 !important;
+  height: 0 !important;
+  padding: 0 !important;
+  border: none;
 }
 
 .rooter button {
   padding: 0;
-  width: 16px;
-  height: 14px;
+  width: 100%;
+  height: 100%;
 }
 
 .rooter div {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+.rooter svg {
+  fill: var(--font-accent);
   width: 100%;
   height: 100%;
 }
