--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -41,6 +41,7 @@
   line-height: 18px;
   letter-spacing: 0.02em;
   color: var(--font-accent);
+  cursor: default;
 }
 @media screen and (min-width: 768px) {
   .logo {
@@ -109,6 +110,7 @@
 
 .svgLogout {
   fill: #3e4e6c;
+  transition: fill var(--transition-duration) var(--transition-timing);
 }
 
 .svgLogout:hover,
