--- a/src/pages/ResetPasswordPage/ResetPassword.module.css
+++ b/src/pages/ResetPasswordPage/ResetPassword.module.css
@@ -1,3 +1,4 @@
+@import url('../../utils/variables.css');
 /* ======== Стили Секции ====== */
 .landing {
   padding-top: 60px;
@@ -61,9 +62,15 @@
 
   width: 52px;
   height: 52px;
+
+  transition: background-color var(--transition-duration) var(--transition-timing),
+  box-shadow var(--transition-duration) var(--transition-timing);
 }
-.reset_form_button:hover {
-  border: solid 1px #fff;
+.reset_form_button:hover,
+.reset_form_button:focus {
+ outline: none;
+ background: var(--accent-hover);
+ box-shadow: 0 0 5px 2px var(--accent-hover);
 }
 /* Цвет плейсхолдера */
 ::-webkit-input-placeholder {
