--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -55,8 +55,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+
   font-family: 'HelveticaNeueCyr-Light';
   font-size: 14px;
 
@@ -64,6 +63,7 @@
 
   margin: 0 auto;
   margin-bottom: 40px;
+  margin-top: 10px;
 
   white-space: nowrap;
   overflow: hidden;
