--- a/src/components/modal/ModalAddCard/ModalAddCard.module.css
+++ b/src/components/modal/ModalAddCard/ModalAddCard.module.css
@@ -69,17 +69,28 @@
   width: 80px;
 }
 
+
 .challengeIconSvg,
 .IconStarSvg {
   fill: var(--font-accent);
   filter: drop-shadow(1px 2px 3px rgb(0 0 0 / 0.4));
+  transition: fill var(--transition-duration) var(--transition-timing);
 }
 
 .challengeIconSvg {
   width: 45px;
   height: 45px;
   margin-bottom: -5px;
+  
 }
+
+.challengeIconBtn:hover .challengeIconSvg,
+.challengeIconBtn:focus .challengeIconSvg,
+.iconStarBtn:hover .IconStarSvg,
+.iconStarBtn:focus .IconStarSvg {
+  fill: var(--accent);
+}
+
 @media screen and (min-width: 768px) {
   .challengeIconSvg {
     width: 52px;
@@ -99,12 +110,12 @@
   }
 }
 
-.challengeIconSvg:hover,
+/* .challengeIconSvg:hover,
 .challengeIconSvg:focus,
 .IconStarSvg:hover,
 .IconStarSvg:hover {
   fill: var(--accent);
-}
+} */
 
 .svgtTitle {
   text-transform: uppercase;
