--- a/src/components/CompletedCard/CompletedCard.module.css
+++ b/src/components/CompletedCard/CompletedCard.module.css
@@ -75,7 +75,6 @@
   cursor: pointer;
   border: none;
   padding-top: 5px;
-  
 }
 
 .arrow {
@@ -185,7 +184,7 @@
   margin-top: -20px;
 }
 
-span {
+.continue {
   color:var(--font-secondary);
   font-family: 'HelveticaNeueCyr-Medium';
 }
