--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,5 +1,6 @@
 @import '../../utils/variables.css';
 
+
 .cardCategoryName {
   font-family: 'HelveticaNeueCyr-Medium';
   font-size: 16px;
@@ -10,12 +11,23 @@
 
   display: flex;
   align-items: center;
+
 }
+
+.setLevel {
+  cursor: pointer;
+}
+
 .cardCategoryCircle {
   margin-right: 10px;
 }
 
 .cardCategoryStart {
+  margin-left: auto;
+  cursor: pointer;
+  color: var(--font-accent);
+}
+.cardCategoryStart_inective{
   margin-left: auto;
 }
 .challengeHeader {
@@ -55,7 +67,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
+  margin-left: auto;
+  margin-right: auto;
   font-family: 'HelveticaNeueCyr-Light';
   font-size: 14px;
 
@@ -63,7 +76,6 @@
 
   margin: 0 auto;
   margin-bottom: 40px;
-  margin-top: 10px;
 
   white-space: nowrap;
   overflow: hidden;
@@ -85,8 +97,23 @@
 
   margin-left: -20px;
 
+  cursor: pointer;
+
   display: flex;
   align-items: center;
+}
+.inectiveCard{
+  cursor:default;
+}
+.arrowDown {
+  color: var(--font-accent);
+  margin-left: 7px;
+
+  visibility: hidden;
+}
+.cardType:hover .arrowDown,
+.cardType:focus .arrowDown {
+  visibility:visible;
 }
 
 /* new style */
