--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,6 +1,5 @@
 @import '../../utils/variables.css';
 
-
 .cardCategoryName {
   font-family: 'HelveticaNeueCyr-Medium';
   font-size: 16px;
@@ -11,7 +10,6 @@
 
   display: flex;
   align-items: center;
-
 }
 
 .setLevel {
@@ -27,7 +25,7 @@
   cursor: pointer;
   color: var(--font-accent);
 }
-.cardCategoryStart_inective{
+.cardCategoryStart_inective {
   margin-left: auto;
 }
 .challengeHeader {
@@ -67,8 +65,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+
   font-family: 'HelveticaNeueCyr-Light';
   font-size: 14px;
 
@@ -76,6 +73,7 @@
 
   margin: 0 auto;
   margin-bottom: 40px;
+  margin-top: 10px;
 
   white-space: nowrap;
   overflow: hidden;
@@ -102,8 +100,8 @@
   display: flex;
   align-items: center;
 }
-.inectiveCard{
-  cursor:default;
+.inectiveCard {
+  cursor: default;
 }
 .arrowDown {
   color: var(--font-accent);
@@ -113,7 +111,7 @@
 }
 .cardType:hover .arrowDown,
 .cardType:focus .arrowDown {
-  visibility:visible;
+  visibility: visible;
 }
 
 /* new style */
