--- a/src/components/CompletedCard/CompletedCard.module.css
+++ b/src/components/CompletedCard/CompletedCard.module.css
@@ -34,10 +34,10 @@
   margin-left: 7px;
   color: var(--font-accent);
   border-bottom: 1px solid var(--font-accent);
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
-.link:hover,
+/* .link:hover,
 .link:focus {
   color: var(--accent);
   border-bottom: 1px solid var(--accent);
@@ -46,7 +46,7 @@
 .link:active {
   color: #3f93b7;
   border-bottom: 1px solid #3f93b7;
-}
+} */
 
 .linkText {
   display: inline-block;
@@ -191,11 +191,11 @@
 
 @media screen and (min-width: 768px) {
   .card {
-    /* width: calc((100% / 3) - 27px); */
+    width: calc((100% / 3) - 27px);
 
     margin-left: 27px;
 
-    width: 204px;
+    /* width: 205px; */
     height: 199px;
   }
   .cardSet {
@@ -211,15 +211,10 @@
   .card {
     margin-left: 27px;
 
-    width: 205px;
+    width: calc((100% / 5) - 27px);
+    /* width: 205px; */
     height: 199px;
   }
 }
 
-/* IPAD MINI LAYOUT */
-@media only screen and (min-width: 1024px) and (orientation: landscape) {
-  .card {
-    width: calc((100% / 4) - 27px);
-    width: 205px;
-  }
-}
+
