--- a/src/components/CompletedChallenge/CompletedChallenge.module.css
+++ b/src/components/CompletedChallenge/CompletedChallenge.module.css
@@ -38,10 +38,10 @@
   margin-left: 7px;
   color: var(--font-accent);
   border-bottom: 1px solid var(--font-accent);
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
-.link:hover,
+/* .link:hover,
 .link:focus {
   color: var(--accent);
   border-bottom: 1px solid var(--accent);
@@ -50,7 +50,7 @@
 .link:active {
   color: #3f93b7;
   border-bottom: 1px solid #3f93b7;
-}
+} */
 
 .linkText {
   display: inline-block;
@@ -172,7 +172,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 205px;
+  width: 100%;
   margin-top: 20px;
   padding: 20px;
   box-shadow: -3px -4px 4px rgba(21, 57, 90, 0.03),
@@ -195,11 +195,11 @@
 }
 @media screen and (min-width: 768px) {
   .card {
-    /* width: calc((100% / 3) - 27px); */
+    width: calc((100% / 3) - 27px);
 
     margin-left: 27px;
 
-    width: 204px;
+    /* width: 205px; */
     height: 199px;
   }
   .cardSet {
@@ -215,17 +215,18 @@
   .card {
     margin-left: 27px;
 
-    width: 204px;
+    width: calc((100% / 5) - 27px);
+    /* width: 205px; */
     height: 199px;
   }
 }
 
 /* IPAD MINI LAYOUT */
-@media only screen and (min-width: 1024px) and (orientation: landscape) {
+/* @media only screen and (min-width: 1024px) and (orientation: landscape) {
   .card {
     width: calc((100% / 4) - 27px);
     width: 205px;
   }
-}
+} */
 
 
